# parallax5-aifv-copilot

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
corpus/: README.md
corpus/contracts/a1_deposit_withdraw_paired/: meta.json  source.sol
corpus/contracts/a1_share_inflation_naive/: meta.json  source.sol
corpus/contracts/a1_trivial_constant_balance/: meta.json  source.sol
corpus/contracts/a1_violator_mint_for_free/: meta.json  source.sol
corpus/contracts/a1_virtual_shares_hardened/: meta.json  source.sol
corpus/contracts/a2_delegatecall_through/: meta.json  source.sol
corpus/contracts/a2_owner_only_setter/: meta.json  source.sol
corpus/contracts/a2_role_based/: meta.json  source.sol
corpus/contracts/a2_two_step_owner/: meta.json  source.sol
corpus/contracts/a2_unprotected_setter/: meta.json  source.sol
corpus/contracts/a3_ecrecover_verify/: meta.json  source.sol
corpus/contracts/a3_eip712_typed/: meta.json  source.sol
corpus/contracts/a3_no_chain_id/: meta.json  source.sol
corpus/contracts/a3_quorum_attestation/: meta.json  source.sol
corpus/contracts/a3_unchecked_signer/: meta.json  source.sol
corpus/contracts/a4_checks_effects_interactions/: meta.json  source.sol
corpus/contracts/a4_no_nonce_replay/: meta.json  source.sol
corpus/contracts/a4_nonce_protected/: meta.json  source.sol
corpus/contracts/a4_reentrancy_via_callback/: meta.json  source.sol
corpus/manifest/: v0.1-bench-1.json  v0.1-bench-5.json  v0.1-smoke.json  v0.1.json
docs/: PREREQUISITES.md
prompts/: proof_v1.md  spec_v1.md
results/: README.md  benchmark_v0_1_summary.md
results/run_v0_1_1contract_4x4/: summary.json
src/parallax5_aifv_copilot/: __init__.py  cli.py
tests/: test_infrastructure.py
verification_project/: Copilot.lean  lake-manifest.json  lakefile.toml
verification_project/Copilot/: Smoke.lean
(+177 files in other folders)
