[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax5-aifv-copilot"
version = "0.1.0"
description = "AI-FV Co-Pilot for PARALLAX-5: LLM proposes, Lean disposes. Multi-LLM cross-validated proof drafting with kernel-verified acceptance."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "AquaUrsa Research", email = "research@aquaursa.io" }
]
keywords = [
    "formal verification",
    "Lean 4",
    "AI-assisted theorem proving",
    "smart contract security",
    "PARALLAX-5",
    "LLM",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security",
]
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
parallax5-aifv = "parallax5_aifv_copilot.cli:main"

[project.urls]
Homepage    = "https://github.com/aquaursa/parallax5-aifv-copilot"
Substrate   = "https://github.com/aquaursa/parallax-5"
Paper       = "https://doi.org/10.5281/zenodo.20402755"

[tool.setuptools.packages.find]
where = ["src"]
include = ["parallax5_aifv_copilot*"]

[tool.setuptools.package-data]
parallax5_aifv_copilot = ["prompts/*.md"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
